--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# TLS Certificates
+*.pem
+
 # Logs
 logs
 *.log
@@ -35,7 +38,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-semantic
+semantic/
+semantic.json
 
 # Typescript v1 declaration files
 typings/
