--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bill Anderson",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.15.3",
-    "pug": "",
-    "elasticsearch": ""
+    "pug": "*",
+    "elasticsearch": "*"
   }
 }
