--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "pug": "*",
-    "elasticsearch": "*"
+    "elasticsearch": "*",
+    "js-yaml': "*"
   }
 }
